# path_score

./: README.md  collision_checker_veloicty_profile_generator.py  package.xml  setup.cfg  setup.py
launch/: main.launch.py
path_score/: collision_check.py  generate_markers.py  generate_paths.py  generate_velocity_profile.py  helpers.py  main.py  score_paths.py
rviz/: main.rviz
