<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>path_score</name>
    <version>0.0.0</version>
    <description>Score Paths</description>
    <maintainer email="suraj.rathi00@gmail.com">suraj</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <exec_depend>rclpy</exec_depend>

    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>

    <exec_depend>std_msgs</exec_depend>
    <exec_depend>visualisation_msgs</exec_depend>

    <exec_depend>python-numpy</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
